--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
 <title>HTML Tutorial</title>
+<link rel="stylesheet" href="style.css">
+
+</head>
 <body>
 
 <h1>This is a heading</h1>
